# pylocker

./: .envrc  .gitignore  Dockerfile  LICENSE  README.md  compose.sh  docker-compose.yml  main.py  main_local.py  mypy.ini  prestart.sh  pyproject.toml  run-compose.sh
app/auth_client/: __init__.py  auth_client.py
app/blob_manager/: __init__.py  blob_manager.py  blob_queries.py
app/core/: __init__.py  app_factory.py  database_schema.py  logging.py  middleware.py  settings.py
app/daos/: blob_dao.py  files_dao.py
app/errors/: __init__.py  error_handlers.py  error_list.py  error_types.py
app/repositories/: blob_repository.py  files_repository.py
app/repositories/queries/: blob_queries.py
app/routers/: __init__.py  files.py  files_router.py  resumable_files_router.py  users_router.py  utils.py
app/schemas/: files.py  messages.py  users.py  utils.py
app/security/: __init__.py  auth_client.py  enum_models.py  security_enums.py  tokens.py  user_validations.py  users.py  users_router.py  users_schemas.py
client/schema/: users.py
docker/: Dockerfile  auth-compose.yml  compose.sh  prestart.sh  pylocker-compose.yml
docker-composes/: auth-compose.yml  pylocker-compose.yml
migrations/: env.py
migrations/versions/: 08c1a41fe3ff_basic_setup.py  56338f79a0ae_basic_setup.py  b7027a79aecd_basic_database_structure.py  c9df46c49427_create_get_lo_size.py
tests/: conftest.py  pytest.ini  settings_tests_version.env
tests/blob_dao_tests/: test_blob_manager.py
tests/blob_manager_tests/: test_blob_manager.py
tests/repositories_tests/: test_blob_repository.py  test_files_repository.py
tests/router_tests/: test_resumable_files_router.py  test_users_router.py
tests/security_tests/: test_auth_client.py  test_users_router.py
tests/utils/: assert_extensions.py  config_queries.py  queries.py  shared_mock_data.py  shared_test_utils.py
