[tool.poetry]
name = "pylocker"
version = "0.0.1"
description = "file storing service"
authors = ["pyux"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
fastapi = "^0.62.0"
pydantic = { extras = ["email"], version = "^1.7.3" }
python-multipart = "^0.0.5"
databases = "^0.4.1"
gunicorn = "^20.0.4"
uvicorn = "^0.13.1"
psycopg2 = "^2.8.6"
asyncpg = "^0.21.0"
config = "^0.5.0"
fusionauth-client = "^1.22.2"
python-jose = { extras = ["cryptography"], version = "^3.2.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.3"
pytest = "^6.2.1"
flakehell = "^0.7.1"
mypy = { extras = ["markdown"], version = "^0.790" }
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = [".certs", ".env", ".gitignore", "Dockerfile", "docker-compose.yaml", "mypy.ini"]
format = "grouped"
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pyflakes = ["**", "-F401"]
flake8-bandit = ["-*", "+S1??"]
"flake8-*" = ["**"]
flake8-docstrings = ["-*"]
